--- a/raes-base/Cargo.toml
+++ b/raes-base/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ron = "0.8"
 parking_lot = "0.12"
 serde = { version = "1.0", features = ["derive"] }
