--- a/raes/Cargo.toml
+++ b/raes/Cargo.toml
@@ -10,6 +10,12 @@ edition = "2021"
 ron = "0.8"
 parking_lot = "0.12"
 serde = { version = "1.0", features = ["derive"] }
+tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "sync", "macros"] }
+anyhow = "1.0"
+thiserror = "1"
+
+# asset
+notify = "6.0.1"
 
 # surface
 raw-window-handle = "0.5"
