--- a/raes/Cargo.toml
+++ b/raes/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2021"
 ron = "0.8"
 parking_lot = "0.12"
 serde = { version = "1.0", features = ["derive"] }
-tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "sync", "macros"] }
+tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "sync", "time", "macros"] }
 anyhow = "1.0"
 thiserror = "1"
 
